added button that changes color on click

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link href="stylesheet.css" rel="stylesheet">
-    Hi!
-    <img src="imgTest.png">
+    <button onclick="changeBkg(self)" id="button">Hi!</button><br>
+    <img src="imgTest.png" width="80">
+    <script src="script.js"></script>
 </html>
