--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <link href="stylesheet.css" rel="stylesheet">
-    <button onclick="changeBkg(self)" style="background-color: #101010;">Hi!</button><br>
-    <img src="imgTest.png" width="80">
-    <script src="script.js"></script>
+    <div style="background-color: rgb(80, 80, 80);">
+        <titleCustom>Coin Shop</titleCustom>
+    </div>
+    Body text
 </html>
