--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <link href="stylesheet.css" rel="stylesheet">
-    <div style="background-color: rgb(80, 80, 80);">
+    <div style="background-color: rgb(80, 80, 80); padding: 0;">
         <titleCustom>Coin Shop</titleCustom>
+        from Philip Green
     </div>
     Body text
 </html>
