added coins page

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
     <link href="stylesheet.css" rel="stylesheet">
     <div style="background-color: rgb(80, 80, 80); padding: 0;">
-        <titleCustom>Coin Shop</titleCustom>
-        from Philip Green
+        <titleCustom>Items for Sale</titleCustom>
     </div>
-    Body text
+    <a href="coinsSale.html">Coins for Sale</a><br>
 </html>
