--- a/coinsSale.html
+++ b/coinsSale.html
@@ -4,16 +4,17 @@
     <div style="background-color: rgb(80, 80, 80); padding: 0;">
         <titleCustom>Coins for Sale</titleCustom>
     </div>
-    <div>
+    <div style="margin: auto;">
         <div class="coinContainer">
-            <b><i>Coin Name</i></b>
+            <b><i>Coin Name</i></b><br>
             Short description of the coin in question
-            <img src="404" alt="Coin Image" class="coinImg">
+            <img src="404" alt="Coin Image" class="coinImg"><br>
+            <button id="Coin1" onclick="enquireProduct(self, 'Coin')" style="cursor: pointer; background-color: rgb(10, 180, 10);">Enquire</button>
         </div>
         <div class="coinContainer">
-            <b><i>Coin Name</i></b>
+            <b><i>Coin Name</i></b><br>
             Short description of the coin in question
-            <img src="404" alt="Coin Image" class="coinImg">
+            <img src="404" alt="Coin Image" class="coinImg"><br>
         </div>
         <div class="clear"></div>
     </div>
