--- a/coinsSale.html
+++ b/coinsSale.html
@@ -9,7 +9,7 @@
             <b><i>Coin Name</i></b><br>
             Short description of the coin in question
             <img src="404" alt="Coin Image" class="coinImg"><br>
-            <button id="Coin1" onclick="enquireProduct(self, 'Coin')" style="cursor: pointer; background-color: rgb(10, 180, 10);">Enquire</button>
+            <button id="Coin1" onclick="enquireProduct(this, 'Coin')" style="cursor: pointer; background-color: rgb(10, 180, 10);">Enquire</button>
         </div>
         <div class="coinContainer">
             <b><i>Coin Name</i></b><br>
