locally store enquiries, one use only

--- a/coinsSale.html
+++ b/coinsSale.html
@@ -15,6 +15,7 @@
             <b><i>Coin Name</i></b><br>
             Short description of the coin in question
             <img src="404" alt="Coin Image" class="coinImg"><br>
+            <button id="Coin2" onclick="enquireProduct(this, 'Coin')" style="cursor: pointer; background-color: rgb(10, 180, 10);">Enquire</button>
         </div>
         <div class="clear"></div>
     </div>
