--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
 
 <script>
     const catalog = [
-        { title: "Rough Waves", file: "web1.jpg" },
-        { title: "Auburn Sea", file: "web2.jpg" },
-        { title: "Evening Plains", file: "web3.jpg" },
-        { title: "Northern Lights", file: "web4.jpg" },
-        { title: "Van Gogh Trees", file: "web5.jpg" },
-        { title: "Rocky Edge", file: "web6.jpg" },
-        { title: "Blue Canyon", file: "web7.jpg" },
-        { title: "Dim Lit Sea", file: "web8.jpg" },
-        { title: "Lone Tree", file: "web9.jpg" },
-        { title: "Blue Sea", file: "web10.jpg" },
-        { title: "Icy Land", file: "web11.jpg" },
-        { title: "Rising Sun", file: "web12.jpg" },
-        { title: "Colorful Hills", file: "web13.jpg" },
-        { title: "Icy Caps", file: "web14.jpg" },
-        { title: "Lone Sentry", file: "web15.jpg" },
+        { title: "Rough Waves", file: "./web1.jpg" },
+        { title: "Auburn Sea", file: "./web2.jpg" },
+        { title: "Evening Plains", file: "./web3.jpg" },
+        { title: "Northern Lights", file: "./web4.jpg" },
+        { title: "Van Gogh Trees", file: "./web5.jpg" },
+        { title: "Rocky Edge", file: "./web6.jpg" },
+        { title: "Blue Canyon", file: "./web7.jpg" },
+        { title: "Dim Lit Sea", file: "./web8.jpg" },
+        { title: "Lone Tree", file: "./web9.jpg" },
+        { title: "Blue Sea", file: "./web10.jpg" },
+        { title: "Icy Land", file: "./web11.jpg" },
+        { title: "Rising Sun", file: "./web12.jpg" },
+        { title: "Colorful Hills", file: "./web13.jpg" },
+        { title: "Icy Caps", file: "./web14.jpg" },
+        { title: "Lone Sentry", file: "./web15.jpg" },
 
 
 
