--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
         if (event.target == document.getElementById('inquiryModal')) { closeModal(); }
     }
 </script>
+<a href="https://www.easycounter.com/">
+<img src="https://www.easycounter.com/counter.php?drewpdawg"
+border="0" alt="Free Web Counter"></a>
+<br><a href="https://www.easycounter.com/">Website Hit Counter</a>
 
 </body>
 </html>
