--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <script>
     const catalog = [
-        { title: "Rough Waves", file: "./web1.jpg" },
+        { title: "Where the Jumblies Live", file: "./web1.jpg" },
         { title: "Auburn Sea", file: "./web2.jpg" },
         { title: "Evening Plains", file: "./web3.jpg" },
         { title: "Northern Lights", file: "./web4.jpg" },
