--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         { title: "Where the Jumblies Live", file: "./web1.jpg" },
         { title: "Auburn Sea", file: "./web2.jpg" },
         { title: "Evening Plains", file: "./web3.jpg" },
-        { title: "Northern Lights", file: "./web4.jpg" },
+        { title: "Far and Few", file: "./web4.jpg" },
         { title: "Whispering Breeze", file: "./web5.jpg" },
         { title: "Rocky Edge", file: "./web6.jpg" },
         { title: "Blue Canyon", file: "./web7.jpg" },
