--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         { title: "Icy Land", file: "./web11.jpg" },
         { title: "Rising Sun", file: "./web12.jpg" },
         { title: "Colorful Hills", file: "./web13.jpg" },
-        { title: "Icy Caps", file: "./web14.jpg" },
+        { title: "The Hills of Chankly Bore", file: "./web14.jpg" },
         { title: "Lone Sentry", file: "./web15.jpg" },
 
 
