--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         { title: "Auburn Sea", file: "./web2.jpg" },
         { title: "Evening Plains", file: "./web3.jpg" },
         { title: "Far and Few", file: "./web4.jpg" },
-        { title: "Whispering Breeze", file: "./web5.jpg" },
+        { title: "In the Shade of the Mountains Brown", file: "./web5.jpg" },
         { title: "Rocky Edge", file: "./web6.jpg" },
         { title: "Blue Canyon", file: "./web7.jpg" },
         { title: "Dim Lit Sea", file: "./web8.jpg" },
