--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
         { title: "Evening Plains", file: "./web3.jpg" },
         { title: "Far and Few", file: "./web4.jpg" },
         { title: "In the Shade of the Mountains Brown", file: "./web5.jpg" },
-        { title: "Rocky Edge", file: "./web6.jpg" },
+        { title: "On a Stormy Day", file: "./web6.jpg" },
         { title: "Blue Canyon", file: "./web7.jpg" },
         { title: "Dim Lit Sea", file: "./web8.jpg" },
         { title: "Lone Tree", file: "./web9.jpg" },
         { title: "Blue Sea", file: "./web10.jpg" },
-        { title: "Icy Land", file: "./web11.jpg" },
+        { title: "On a Winter's Morn", file: "./web11.jpg" },
         { title: "Rising Sun", file: "./web12.jpg" },
         { title: "Colorful Hills", file: "./web13.jpg" },
         { title: "The Hills of Chankly Bore", file: "./web14.jpg" },
