--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         { title: "Blue Canyon", file: "./web7.jpg" },
         { title: "Dimly Lit Sea", file: "./web8.jpg" },
         { title: "Lone Tree", file: "./web9.jpg" },
-        { title: "Blue Sea", file: "./web10.jpg" },
+        { title: "The Bay of Gurtle", file: "./web10.jpg" },
         { title: "On a Winter's Morn", file: "./web11.jpg" },
         { title: "Rising Sun", file: "./web12.jpg" },
         { title: "Colorful Hills", file: "./web13.jpg" },
