--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         { title: "Lone Tree", file: "./web9.jpg" },
         { title: "The Bay of Gurtle", file: "./web10.jpg" },
         { title: "On a Winter's Morn", file: "./web11.jpg" },
-        { title: "Rising Sun", file: "./web12.jpg" },
+        { title: "From the Coast of Coromandel", file: "./web12.jpg" },
         { title: "Colorful Hills", file: "./web13.jpg" },
         { title: "The Hills of Chankly Bore", file: "./web14.jpg" },
         { title: "Lone Sentry", file: "./web15.jpg" },
