--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         { title: "From the Coast of Coromandel", file: "./web12.jpg" },
         { title: "Colorful Hills", file: "./web13.jpg" },
         { title: "The Hills of Chankly Bore", file: "./web14.jpg" },
-        { title: "Lone Sentry", file: "./web15.jpg" },
+        { title: "The Land Where the Bong Tree Grows", file: "./web15.jpg" },
 
 
 
