--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         { title: "On a Stormy Day", file: "./web6.jpg" },
         { title: "Blue Canyon", file: "./web7.jpg" },
         { title: "Dimly Lit Sea", file: "./web8.jpg" },
-        { title: "Lone Tree", file: "./web9.jpg" },
+        { title: "The Crumpetty Tree", file: "./web9.jpg" },
         { title: "The Bay of Gurtle", file: "./web10.jpg" },
         { title: "On a Winter's Morn", file: "./web11.jpg" },
         { title: "From the Coast of Coromandel", file: "./web12.jpg" },
