--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <script>
     const catalog = [
         { title: "Where the Jumblies Live", file: "./web1.jpg" },
-        { title: "Auburn Sea", file: "./web2.jpg" },
+        { title: "The Land of Tute", file: "./web2.jpg" },
         { title: "Evening Plains", file: "./web3.jpg" },
         { title: "Far and Few", file: "./web4.jpg" },
         { title: "In the Shade of the Mountains Brown", file: "./web5.jpg" },
