--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         { title: "In the Shade of the Mountains Brown", file: "./web5.jpg" },
         { title: "On a Stormy Day", file: "./web6.jpg" },
         { title: "Blue Canyon", file: "./web7.jpg" },
-        { title: "Dimly Lit Sea", file: "./web8.jpg" },
+        { title: "To the Calm and Silent Sea", file: "./web8.jpg" },
         { title: "The Crumpetty Tree", file: "./web9.jpg" },
         { title: "The Bay of Gurtle", file: "./web10.jpg" },
         { title: "On a Winter's Morn", file: "./web11.jpg" },
